# clawpify

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Untitled  amplify.yml  art.avif  bob.json  bunfig.toml  package.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  railway.toml
backend/.sqlx/: query-0b0cf1d060c30df8449086431b42414b435b2d58c61e82b64113a1c8c42c1ba2.json  query-11cc1a54fc1c04f986870a877f4d3f26a4192285226ec87401eab06e2a23364f.json  query-3009e1c57a287e9c23af251f664981279ba7616d0a165467fd25d55a596d21e4.json  query-4ad0e601469f3a61b3671662e34c052e9fcc3dacea164c8319b3217ab9dd6978.json  query-568cfbec95d09cfafa308d01f3d376dfd49dbcdcee2db3562f98359de04c0361.json  query-6e4ed81323dc95142a496a98029994761e9e6d1fbf36b6d3dc896884efd24010.json  query-a36d6328c23d462de8d92275ff45e3904fce880f9cd98ef72d03ca2e76bc2f0d.json  query-bdeb99b3b161908ea78e8406334f840bb02eb91c046d25bddcd0c04fdc532e41.json  query-cd56258b111ed45dd250ef056f65f3390bde331566bf57185e038b31458b2b23.json  query-d4d94406576e52ca6aea3f2267abbdfe921a6ff4048be80be1ebd651dbda8225.json
backend/src/: auth.rs  error.rs  http_client.rs  lib.rs  main.rs
backend/src/agent_activity/: mod.rs
backend/src/ai_visibility/: mod.rs
backend/src/audit/: citation.rs  crawl.rs  insight.rs  mod.rs  models.rs
backend/src/audit/citation/: handlers.rs  mod.rs  openai.rs  parsing.rs  (+2 more)
backend/src/crypto/: tokens.rs
backend/src/db/: mod.rs
backend/src/dto/: activity.rs  audit_lead.rs  citation.rs  consignors.rs  contracts.rs  intake.rs  intake_batches.rs  listings.rs  llm.rs  mod.rs  price_estimation.rs  shopify.rs  stores.rs  subscribers.rs
backend/src/integrations/: mod.rs
backend/src/llm/: citation_analysis.rs  config.rs  mod.rs  openrouter.rs  orchestrator.rs  providers.rs  router.rs  types.rs
backend/src/middleware/: mod.rs
backend/src/models/: activity.rs  channel_connection.rs  citation.rs  consignment_listing.rs  consignor.rs  contract_payout.rs  contracts.rs  intake_batch.rs  mod.rs  organization.rs  store.rs  stored_image.rs  subscriber.rs
backend/src/provider/: gemini.rs  mod.rs  openai.rs  perplexity.rs
backend/src/rate_limit/: mod.rs
backend/src/repositories/: activity.rs  api_idempotency.rs  channel_connections.rs  consignors.rs  contract_payouts.rs  contracts.rs  intake_batches.rs  intake_phone_bindings.rs  listings.rs  mod.rs  organizations.rs  pagination.rs  stored_images.rs  stores.rs  subscribers.rs  twilio_inbound.rs
backend/src/routes/: activity.rs  audit_leads.rs  citation.rs  citation_runs.rs  consignors.rs  contracts.rs  extractors.rs  health.rs  intake.rs  listings.rs  llm.rs  mod.rs  price_estimation.rs  s3.rs  state.rs  stores.rs  subscribers.rs  visibility.rs
backend/src/s3/: mod.rs  presign.rs
backend/src/services/: citation_runs.rs  insight.rs  mod.rs  price_estimation.rs
backend/src/stores/: mod.rs
backend/src/subscribers/: mod.rs
backend/src/util/: client_ip.rs  idempotency.rs  mod.rs  phone.rs
backend/src/waitlist/: mod.rs
backend/tests/: api_crud.rs  contracts_api.rs  listing_images.rs  llm_citation_test.rs  s3_storage.rs  stored_images.rs
backend/tests/common/: mod.rs
(+240 files in other folders)
