[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tower_governor = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
# Transitive (via sqlx/sqlx-cli path); 0.5.12 requires rustc 1.88 — pin for rust-toolchain 1.85.0
home = "=0.5.11"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.5"
base64 = "0.22"
hex = "0.4"
utoipa = { version = "4.2", features = ["chrono", "uuid"] }

# tower: integration tests only (tower::ServiceExt in tests/api_crud.rs); production uses tower-http.
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"